# tt

./: Cargo.toml  README.md  mise.toml
.github/: labeler.yml  pull_request_template.md
.github/workflows/: labeler.yml  testing.yml
docs/: ARCHITECTURE.md
lib/: engine.rs  lib.rs
lib/core/: enums.rs  errors.rs  metadata.rs  registry.rs  traits.rs  types.rs
lib/fixtures/golang/: base_test.go  table_test_a.go
lib/framework/: mod.rs
lib/framework/golang/: common.rs  gotest.rs  gotest_test.rs  mod.rs  runnable_meta.rs
lib/framework/golang/operations/: detect_gotest_file.rs  get_build_tags.rs  gotest_get_file_tests.rs  gotest_get_subtests.rs  gotest_get_test.rs  mod.rs
lib/framework/golang/treesitter/: build_tags.rs  constants.rs  gotest_subtest_in_loop_named_fields_struct_predfined.rs  gotest_subtest_in_loop_unnamed_fields_struct_predefined.rs  gotest_subtest_out_of_loop_named_fields.rs  gotest_subtest_string_literal.rs  gotest_test_function.rs  mod.rs  package_in_import_list.rs  package_in_single_import.rs
lib/framework/golang/treesitter/operations/: extract_gotest_subtests.rs  mod.rs  parse_tree.rs
lib/framework/golang/treesitter/queries/: build_tags.rs  mod.rs  (+4 more)
lib/terminal/: commands.rs  core.rs  mod.rs
lib/treesitter/: node.rs
src/: lib.rs
src/core/: enums.rs  errors.rs  metadata.rs  mod.rs  registry.rs  traits.rs  types.rs
src/fixtures/golang/: base_test.go
src/framework/: mod.rs
src/framework/golang/: common.rs  common_test.rs  gotest.rs  gotest_test.rs  mod.rs  runnable_meta.rs
src/treesitter/: mod.rs  node.rs
