[package]
name = "examen-tools"
version = "0.0.1"
edition = "2021"
rust-version = "1.89.0"
description = "A set of tools to ease testing across different languages and frameworks using neovim."
repository = "https://github.com/Ydot19/examen-tools"
license = "MIT"
keywords = ["neovim", "plugin", "development-tools", "testing"]

[lib]
crate-type = ["cdylib"]
name = "examen"
path = "./lib/lib.rs"

[dependencies]
mlua = { version = "0.10.2", features = ["luajit",  "vendored"]}

thiserror = {version = "2.0.10"}

# regex
regex = {version = "1.0.0"}

# serde
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"

# tree-sitter grammars
tree-sitter = "0.23"
tree-sitter-go = "0.23"

[dev-dependencies]
googletest = "0.14.2"
rstest = "0.24.0"
